--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>dev.ai4j</groupId>
     <artifactId>aleph-alpha-client-java</artifactId>
-    <version>0.10.0</version>
+    <version>0.2.0-SNAPSHOT</version>
 
     <name>Java Client for Aleph Alpha</name>
     <description>Java Client for Aleph Alpha</description>
