--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.heezer</groupId>
     <artifactId>aleph-alpha-client-java</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.1.1</version>
 
     <name>Java Client for Aleph Alpha</name>
     <description>Java Client for Aleph Alpha</description>
